chore(gateway): disable authentication and JWT security for development
- allow all requests via permitAll()
- disable OAuth2 resource server configuration
- update CORS to allow all origins